@@ -13,52 +13,33 @@
 <plugins>
 
 <plugin>
-	<groupId>org.apache.maven.plugins:maven-dependency-plugin:2.10:tree -Dverbose=true</groupId>
-	<artifactId>maven-surefire-plugin</artifactId>
-	<version>2.22.2</version>
-	<configuration>
-		<argLine>
-			--illegal-access=permit
-		</argLine>
-		<testFailureIgnore>true</testFailureIgnore>
-		<forkCount>2</forkCount>
-		<reuseForks>true</reuseForks>
-		<argLine>${surefireArgLine}</argLine> 
-	</configuration>
-</plugin>
-
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <source>11</source>
+            <target>11</target>
+        </configuration>
+        <version>3.6.1</version>
+        </plugin>
 <plugin>
-	<groupId>org.jacoco</groupId>
-	<artifactId>jacoco-maven-plugin</artifactId>
-	<version>0.8.7</version>
-	<executions>
-		<execution>
-			<id>default-prepare-agent</id>
-			<goals>
-				<goal>prepare-agent</goal>
-			</goals>
-			<configuration>
-				<destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
-				<propertyName>surefireArgLine</propertyName>
-				<descriptorRefs>
-         <descriptorRef>jar-with-dependencies</descriptorRef>
-       </descriptorRefs>
-			</configuration>
-		</execution>
-		<execution>
-			<id>default-report</id>
-			<phase>test</phase>
-			<goals>
-				<goal>report</goal>
-			</goals>
-			<configuration>
-				<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
-				<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
-			</configuration>
-		</execution>
-		
-	</executions>
-
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.8.5</version>
+    <executions>
+        <execution>
+            <goals>
+                <goal>prepare-agent</goal>
+            </goals>
+        </execution>
+        <execution>
+            <id>report</id>
+            <phase>prepare-package</phase>
+            <goals>
+                <goal>report</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
 </plugins>
 </build>
   <dependencies>
